enable_testing()

file(GLOB children RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)
foreach(child ${children})
	if(${child} MATCHES "test_.+\.cpp")
		add_executable(test_program test_program.cpp)
		target_include_directories(test_program PUBLIC include)
		target_link_libraries(test_program voidcore)
		add_test(test_program test_program)
	endif()
endforeach()