enable_testing()

file(GLOB children RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)
foreach(child ${children})
	if(${child} MATCHES "test_.+\.cpp")
		string(LENGTH ${child} len)
		math(EXPR len "${len} - 4")
		string(SUBSTRING ${child} 0 ${len} name)

		add_executable(${name} ${child})
		target_include_directories(${name} PUBLIC include)
		target_link_libraries(${name} voidcore)
		add_test(${name} ${name})
	elseif(${child} MATCHES ".+\.v")
		configure_file(${child} ${CMAKE_CURRENT_BINARY_DIR}/${child} COPYONLY)
	endif()
endforeach()